HSL color wheel shows all white in the video editor color balance modifier #39228

Closed
opened 2014-03-17 16:09:01 +01:00 by kevin donovan · 6 comments

System Information
windows 8.1
intel i5
nvidia nv 4200m

Blender Version
git

Short description of error
HSL color wheel shows all white in the video editor color balance modifier

Exact steps for others to reproduce the error

  1. Change the color wheel to HSL in blender preferences
  2. Go to the video editor and add a movie clip
  3. add the color balance modifier
**System Information** windows 8.1 intel i5 nvidia nv 4200m **Blender Version** git **Short description of error** HSL color wheel shows all white in the video editor color balance modifier **Exact steps for others to reproduce the error** 1. Change the color wheel to HSL in blender preferences 2. Go to the video editor and add a movie clip 3. add the color balance modifier
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @kevindonovan

Added subscriber: @kevindonovan
Antonis Ryakiotakis was assigned by Campbell Barton 2014-03-17 19:09:28 +01:00

This issue was referenced by blender/blender-addons-contrib@06de5be90e

This issue was referenced by blender/blender-addons-contrib@06de5be90e8b009c53b6fe3225085fcd4375f21f

This issue was referenced by 06de5be90e

This issue was referenced by 06de5be90e8b009c53b6fe3225085fcd4375f21f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 06de5be90e.

Closed by commit 06de5be90e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39228
No description provided.