source/blender/blenlib/intern/math_color.c
@@ -349,7 +349,7 @@ void rgb_to_hsl(float r, float g, float b, float *lh, float *ls, float *ll)
 {
 	const float cmax = max_fff(r, g, b);
 	const float cmin = min_fff(r, g, b);
-	float h, s, l = (cmax + cmin) / 2.0f;
+	float h, s, l = min_ff(1.0, (cmax + cmin) / 2.0f);
 
 	if (cmax == cmin) {
 		h = s = 0.0f; // achromatic
