source/blender/makesrna/intern/rna_sequencer.c
@@ -1227,19 +1227,19 @@ static void rna_def_color_balance(BlenderRNA *brna)
 	RNA_def_struct_ui_text(srna, "Sequence Color Balance Data", "Color balance parameters for a sequence strip and it's modifiers");
 	RNA_def_struct_sdna(srna, "StripColorBalance");
 
-	prop = RNA_def_property(srna, "lift", PROP_FLOAT, PROP_COLOR);
+	prop = RNA_def_property(srna, "lift", PROP_FLOAT, PROP_COLOR_GAMMA);
 	RNA_def_property_ui_text(prop, "Lift", "Color balance lift (shadows)");
 	RNA_def_property_ui_range(prop, 0, 2, 0.1, 3);
 	RNA_def_property_float_default(prop, 1.0f);
 	RNA_def_property_update(prop, NC_SCENE | ND_SEQUENCER, "rna_SequenceColorBalance_update");
 
-	prop = RNA_def_property(srna, "gamma", PROP_FLOAT, PROP_COLOR);
+	prop = RNA_def_property(srna, "gamma", PROP_FLOAT, PROP_COLOR_GAMMA);
 	RNA_def_property_ui_text(prop, "Gamma", "Color balance gamma (midtones)");
 	RNA_def_property_ui_range(prop, 0, 2, 0.1, 3);
 	RNA_def_property_float_default(prop, 1.0f);
 	RNA_def_property_update(prop, NC_SCENE | ND_SEQUENCER, "rna_SequenceColorBalance_update");
 
-	prop = RNA_def_property(srna, "gain", PROP_FLOAT, PROP_COLOR);
+	prop = RNA_def_property(srna, "gain", PROP_FLOAT, PROP_COLOR_GAMMA);
 	RNA_def_property_ui_text(prop, "Gain", "Color balance gain (highlights)");
 	RNA_def_property_ui_range(prop, 0, 2, 0.1, 3);
 	RNA_def_property_float_default(prop, 1.0f);
